--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/sizes.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/sizes.less
@@ -29,6 +29,7 @@
 @field-status-margin-left: 10px;
 @text-field-padding-x: 10px;
 @text-field-padding-y: 7px;
+@text-field-padding-top-compensation: 1px;
 @text-field-alternative-padding-left: 0;
 @text-field-alternative-padding-right: 0;
 @text-field-alternative-icon-padding-right: 4px;
